<resources>
    <string name="app_name">MusixMatch</string>
    <!--nav_menu-->
    <string name="menu_nav_home">Home</string>
    <string name="menu_nav_music">Music</string>
    <string name="menu_nav_search">Search</string>
    <!--search-->
    <string name="text_title_intro_search">Search the world\'\s largest lyrics catalog</string>
    <string name="text_search_hint">Types title, artist or lyrics</string>
    <string name="text_clear_history_search">Clear History Search</string>
    <string name="text_view_more_search">View More</string>
    <string name="text_results_search">RESULTS</string>
    <string name="text_menu_show_lyrics">Show lyrics</string>
    <string name="text_menu_go_album">Go to album</string>
    <string name="text_delete">Delete</string>
    <string name="text_edit_song_info">Edit song Info</string>
    <string name="text_add_to_playlist">Add to playlist</string>
    <string name="text_add_to_queue">Add to queue</string>
    <string name="text_play">Play</string>
    <string name="text_edit_album_info">Edit album info</string>
    <string name="shuffle_play">Shuffle Play</string>
    <!--fragment_lyrics-->
    <string name="text_tap_to_refresh">Tap to refresh</string>
    <string name="text_check_internet">Please check your Internet connection and try again.</string>
    <string name="text_lyrics_not_found">Lyrics not found</string>
    <!--artist-tab-->
    <string name="text_tracks">%d Tracks</string>
    <string name="text_track">%d Track</string>
    <string name="text_albums">%d Albums</string>
    <string name="text_album">%d Album</string>
    <!--fragment_music-->
    <string name="text_music_title">Music</string>
    <string name="text_album_tab">ALBUM</string>
    <string name="text_artist_tab">ARTIST</string>
    <string name="text_track_tab">TRACK</string>
    <string name="text_playlist_tab">PLAYLIST</string>
    <!--activity_track_info-->
    <string name="text_path">Path:\u0020</string>
    <string name="text_size">Size:\u0020 </string>
    <string name="text_albums_info">Albums</string>
    <string name="text_artists_info">Artists</string>
    <string name="text_title_info">Title</string>
    <string name="text_song_information">Song Information</string>
    <!--playlist tab-->
    <string name="text_rename_playlist">Rename</string>
    <string name="text_error_name_has_exist">Name has exist!</string>
    <string name="text_rename_playlist_successful">Rename Successful</string>
    <string name="text_create_playlist_successful">Create Successful</string>
    <string name="text_playlist_does_not_exist">Playlist does not exist</string>
    <string name="text_delete_playlist_successful">Delete Successful</string>
    <string name="text_error_delete_playlist">Delete Failed</string>
    <string name="text_duplicate_pre_playlist_name">Has Duplicate Previous Playlist Name</string>
</resources>
